[package]
name = "timesheet-service"
version = "0.1.0"
authors = ["Marcus Schilling <marcus@5-schillinge.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.5"
chrono = "0.4.13"
serde_json = "1.0.57"